# testQtBasicUtils

./: .gitignore  CMakeLists.txt  CMakePresets-Common.json  CMakePresets-Linux.json  CMakePresets-Windows.json  CMakePresets.json  CMakePresets.json.orig  README.md  vcpkg-configuration.json  vcpkg.json
CMake/: SetupProjectDependencies.cmake  SupportQt56.cmake  SupportQxt.cmake  SupportSwitchingQtVersionAsAFeature.cmake
Utilities/: CMakeLists.txt
Utilities/Testing/: CMakeLists.txt  UnitTests.cmake
Utilities/Testing/Include/: cmdTestFloatOpts.h  testCommandLineInclude.h  testDBCaseStatement.h  testDBExpression.h  testSetVariable.h  testUserProps.h  testxml.h  testxmlimp.h  testxmlperf.h
Utilities/Testing/src/: basic.cxx  cmdTestFloatOpts.cxx  testCommandLineInclude.cxx  testDBCaseStatement.cxx  testDBExpression.cxx  testSetVariable.cxx  testUserProps.cxx  testxml.cxx  testxmlimp.cxx  testxmlperf.cxx
Utilities/qbuGUIDev0/: CMakeLists.txt
Utilities/qbuGUIDev0/Include/: DevelopGUIDB0.h  qbuGUIDev0MainWindow.h
Utilities/qbuGUIDev0/rc/: DevelopGUIDB0.ui  qbuGUIDev0MainWindow.ui
Utilities/qbuGUIDev0/src/: DevelopGUIDB0.cxx  main.cxx  qbuGUIDev0MainWindow.cxx
Utilities/qbuGUIDev1/: CMakeLists.txt
Utilities/qbuGUIDev1/Include/: qbuGUIDev1MainWindow.h
Utilities/qbuGUIDev1/rc/: qbuGUIDev1MainWindow.ui
Utilities/qbuGUIDev1/src/: main.cxx  qbuGUIDev1MainWindow.cxx
Utilities/qbuGUIDev2/: CMakeLists.txt
Utilities/qbuGUIDev2/Include/: DevelopGUIDB2.h  qbuGUIDev2LoggerJob.h  qbuGUIDev2MainWindow.h
Utilities/qbuGUIDev2/rc/: DevelopGUIDB2.ui  qbuGUIDev2MainWindow.ui
Utilities/qbuGUIDev2/src/: DevelopGUIDB2.cxx  main.cxx  qbuGUIDev2LoggerJob.cxx  qbuGUIDev2MainWindow.cxx
vcpkg/ports/cmake-modules/: portfile.cmake  vcpkg.json
vcpkg/ports/linuxdeployqt/: portfile.cmake  vcpkg.json
vcpkg/ports/qt-basic-utils/: portfile.cmake  vcpkg.json
vcpkg/ports/qxt/: portfile.cmake  portfile.cmake.bak  vcpkg.json
vcpkg/triplets/: x64-linux.cmake
